# countfiles

./: .dockerignore  .gitignore  README.md  notes.txt  pyproject.toml  setup.cfg
countfiles/: countfiles.py
src/countfiles/: cli.py  node.py  output_line.py  prepared_node.py  tree.py  utils.py
test/: Dockerfile-py37  test-py37
