[metadata]
name = countfiles
version = attr: countfiles.__version__
author = Robert Huselius
author_email = robert@huseli.us
url = https://github.com/Eboreg/yt2newpipe
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = countfiles
python_requires = >=3.5

[options.entry_points]
console_scripts =
    countfiles = countfiles.countfiles:cli
