[metadata]
name = countfiles
version = attr: countfiles.__version__
author = Robert Huselius
author_email = robert@huseli.us
url = https://github.com/Eboreg/yt2newpipe
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = countfiles
python_requires = >=3.5
install_requires =
    colorama >= 0.4.4

[options.entry_points]
console_scripts =
    countfiles = countfiles.countfiles:cli

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
    **/lib
ignore = W504,W601,F723,E731,E266,E741
max-line-length = 119
max-doc-length = 79
